[package]
name = "php_derive"
version = "0.1.0"
authors = ["Norbytus <norbyt93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
solder = { path = "../"}
syn = { version = "1.0.3", features = ["full"] }
quote = "*"
